{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 52,
  "lineage": "20efdeff-6697-706c-e4da-156584c764ba",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "abhijitipdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/publicIPAddresses/abhijitPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.139.174",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "abhijitPublicIp1",
            "resource_group_name": "abhijitrg1",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "abhijitnic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/networkInterfaces/abhijitnic1",
            "internal_domain_name_suffix": "x0rgxv35pkuubf4nizmdz1p5gh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/publicIPAddresses/abhijitPublicIp1",
                "subnet_id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1/subnets/abhijitsubnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-64-09",
            "name": "abhijitnic1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "abhijitrg1",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Compute/virtualMachines/abhijitvm1"
          },
          "dependencies": [
            "azurerm_public_ip.abhijitpip",
            "azurerm_resource_group.abhijitrg1",
            "azurerm_subnet.abhijitsubnet1",
            "azurerm_virtual_network.abhijitvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "abhijitsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/networkSecurityGroups/abhijitsg1",
            "location": "eastus",
            "name": "abhijitsg1",
            "resource_group_name": "abhijitrg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Internet",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "abhijitsgrule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.abhijitrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "abhijitsgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/networkSecurityGroups/abhijitsg1/securityRules/abhijitsgrule1",
            "name": "abhijitsgrule1",
            "network_security_group_name": "abhijitsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "abhijitrg1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.abhijitsg1",
            "azurerm_resource_group.abhijitrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "abhijitpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/publicIPAddresses/abhijitPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.139.174",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "abhijitPublicIp1",
            "resource_group_name": "abhijitrg1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.abhijitrg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "abhijitsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1/subnets/abhijitsubnet1",
            "name": "abhijitsubnet1",
            "resource_group_name": "abhijitrg1",
            "virtual_network_name": "abhijitvn1"
          },
          "dependencies": [
            "azurerm_resource_group.abhijitrg1",
            "azurerm_virtual_network.abhijitvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "abhijitsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1/subnets/abhijitsubnet1",
            "network_security_group_id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/networkSecurityGroups/abhijitsg1",
            "subnet_id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1/subnets/abhijitsubnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.abhijitsg1",
            "azurerm_resource_group.abhijitrg1",
            "azurerm_subnet.abhijitsubnet1",
            "azurerm_virtual_network.abhijitvn1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "abhijitvn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d76ba2be-7abf-40a9-97cd-46583cedff37",
            "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1",
            "location": "eastus",
            "name": "abhijitvn1",
            "resource_group_name": "abhijitrg1",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/virtualNetworks/abhijitvn1/subnets/abhijitsubnet1",
                "name": "abhijitsubnet1",
                "security_group": "/subscriptions/bdcee6f9-b49d-42d6-a922-11bd09d4f196/resourceGroups/abhijitrg1/providers/Microsoft.Network/networkSecurityGroups/abhijitsg1"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.abhijitrg1"
          ]
        }
      ]
    }
  ]
}